# OrchestrAI

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_evals.py
backend/app/: config.py  evals.py  events.py  hf_ort.py  hf_tgi.py  main.py  model_apis.py  models.py  ollama.py  replay.py  schemas.py  tracing.py  worker.py  ws.py
frontend/: package.json
frontend/app/: collapsible-card.tsx  globals.css  layout.tsx  new-api-run.tsx  new-hf-run.tsx  new-ollama-run.tsx  page.tsx  run-demo-button.tsx  run-hf-button.tsx  run-ollama-button.tsx
frontend/app/api-models/: page.tsx
frontend/app/hf/: page.tsx
frontend/app/ollama/: page.tsx
frontend/app/runs/: page.tsx  runs-list.tsx
frontend/app/runs/[id]/: page.tsx  run-actions.tsx  steps-client.tsx
hf-ort/: Dockerfile
hf-ort/app/: main.py
